syntax = "proto3";

package pricing_tf.block_user_service;

service BlockUserService {
  rpc BlockUser (BlockUserRequest) returns (BlockUserResponse);
  rpc UnblockUser (UnblockUserRequest) returns (UnblockUserResponse);
}

message BlockUserRequest {
  string steam_id = 1;
}

message BlockUserResponse {
  bool success = 1;
  int32 deleted_listing_count = 2;
}

message UnblockUserRequest {
  string steam_id = 1;
}

message UnblockUserResponse {
  bool success = 1;
}